# onecodeplant

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_GUIDE.md  LICENSE  README.md  pyproject.toml  pytest.ini
docs/: ai_engine_integration.md  plugin_development.md  simulator_control.md  testing_framework_overview.md
examples/: ai_examples.md  ai_examples.py  example_ros_commands.sh  gazebo_launch.py  my_world.sdf  webots_launch.py
examples/example_plugin/: __init__.py  plugin.py
examples/sample_plugin/: __init__.py  plugin.py
onecode/: __init__.py  cli.py  config.py  plugin_registry.json
onecode/ai/: __init__.py  nlp_processor.py
onecode/ai/prompts/: base_prompt.txt
onecode/logs/: __init__.py
onecode/middleware/: __init__.py  checks.py  logger.py  ros_utils.py  simulators.py
onecode/plugins/: __init__.py  base_plugin.py  plugin_loader.py  plugin_manager.py
onecode/plugins/btgenbot_plugin/: __init__.py  plugin.py
onecode/plugins/ros_llm_plugin/: __init__.py  plugin.py
onecode/plugins/roscribe_plugin/: __init__.py  plugin.py  roscribe.py
onecode/plugins/roscribe_plugin/templates/: launch_template.py.j2  ros_node_template.py.j2
onecode/plugins/symforce_plugin/: __init__.py  plugin.py
tests/: README.md  conftest.py  demo_test_suite.py
tests/integration/: test_cli_integration.py
tests/unit/: test_cli_core.py  test_config.py  test_middleware.py  test_plugin_system.py
